--- a/css/styles.css
+++ b/css/styles.css
@@ -3,37 +3,36 @@ body {
     width: 1440px;
 }
 
-a , li , ul{
+/* a , li , ul{
     text-decoration: none;
-}
+} */
 
 .gallery {
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
-    padding: 0px;
-    margin: 0;
-    /* width: 100%; */
-    width: calc((100% - 24px) / 3);
-    /* gap: 24px; */
+    padding: 0 156px;
+    margin: 0 ;
+    
 }
 
 .gallery-item {
-    margin: 5px;
-    
+    margin: 0;
+   padding: 0 ;
+    width: calc((100% - 47px) / 3);
     
 }
 
 .gallery-link {
     display: block;
-    
+
 }
 
 .gallery-image {
     display: block;
-    width: 100%;
+    width: 360px;
     height: auto;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease;
     
