index.html styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     width: 1440px;
+    margin: 0;
 }
 
 /* a , li , ul{
@@ -11,7 +12,7 @@ body {
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
-    padding: 12px 155px;
+    padding: 12px 143px;
     margin: 0 ;
     
 }
@@ -19,7 +20,7 @@ body {
 .gallery-item {
     margin: 0;
    padding: 12px;
-    width: calc((100% - 47px) / 3);
+    /* width: calc((100% - 47px) / 3); */
     
 }
 
@@ -56,9 +57,9 @@ body {
 }
 
 .modal img {
-    max-width: 80%;
-    max-height: 80%;
-    border-radius: 10px;
+    width: 1112px;
+    height: 640px;
+   
 }
 
 .modal-description {
